k8s/child.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alpaca-child
  namespace: alpaca
spec:
  replicas: 2
  selector:
    matchLabels:
      app: crawlab-worker
  template:
    metadata:
      labels:
        app: crawlab-worker
    spec:
      containers:
      - image: crawlabteam/crawlab:latest
        imagePullPolicy: Always
        name: crawlab
