k8s/root.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: alpaca
#   namespace: alpaca
# spec:
#   // ... existing code ...
#   type: NodePort  
#   ports:
#   - port: 80
#     targetPort: 8080
#     nodePort: 30080  # 范围30000-32767
#     name: http
#   - name: grpc
#     port: 9666
#     targetPort: 9666
#     nodePort: 30666  # 指定节点端口


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alpaca-ingress
  namespace: alpaca
spec:
  rules:
  - host: alpaca.local  # 自定义域名
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: alpaca
            port:
              number: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alpaca-root
  namespace: alpaca
  annotations:
    description: "Alpaca root deployment"
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
spec:
  selector:
    matchLabels:
      app: alpaca-root
  template:
    metadata:
      labels:
        app: alpaca-root
    spec:
      containers:
      - image: #待制作
        imagePullPolicy: Always
        name: alpaca
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
        ports:
        - containerPort: 8080
          name: alpaca
        - containerPort: 9666
          name: grpc
